# Chess-AI-2

cpp-chess-engine-v2/: CMakeLists.txt  benchmarking.h  board.cpp  board.h  main.cpp  smartness.h
web/: index.html
